# fused-cross-entropy-loss

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py
archive/: _cu_ext.cu  _fused_ce_loss.h  _fused_ce_loss_fwd.h  _pybind_helpers.h
csrc/: gpu_ops.cpp  kernels.cu
cu_ext/: cu_ext.cpp  cu_ext.cu  descriptor.h  element_types.h  fused_ce_loss.h  fused_ce_loss_fwd.h  kernel_helpers.h  kernels.cu  kernels.h  pybind11_kernel_helpers.h  pybind_helpers.h  utils.h
cu_ext/device/: fwd_adapter.h
cu_ext/dispatch/: dispatcher.h  fwd_dispatcher.h
cu_ext/kernel/: fwd_kernels.h
fused_ce/: __init__.py  fused_ce.cpp
fused_ce_loss/: __init__.py  fused_ce_loss.py
tests/: test.ipynb
